Updated parking slots service